force-app/main/default/objects/Staging_Events__c/Staging_Events__c.object-meta.xml
<CustomObject>
    <description>To hold event records from ERT or any future event registration system
The Event record will create an associated campaign with Proper Attendee Status mapping
Connect to the Planner Event Detail 
Contain any unique data required from ERT specifically.</description>
    <label>Staging Event</label>
    <nameField>
        <label>Staging Events Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staging Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>