force-app/main/default/objects/Staging_Events__c/fields/ERT_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>ERT_Event_Id__c</fullName>
    <label>ERT Event Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>