force-app/main/default/objects/Staging_Events__c/fields/ERT_Military_Price__c.field-meta.xml
<CustomField>
    <fullName>ERT_Military_Price__c</fullName>
    <label>ERT Military Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>