force-app/main/default/objects/Staging_Events__c/fields/ERT_Military_Registration_ID__c.field-meta.xml
<CustomField>
    <fullName>ERT_Military_Registration_ID__c</fullName>
    <label>ERT Military Registration ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>