force-app/main/default/objects/Staging_Events__c/fields/ERT_Pastor_Pricing__c.field-meta.xml
<CustomField>
    <fullName>ERT_Pastor_Pricing__c</fullName>
    <label>ERT Pastor Pricing</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>