force-app/main/default/objects/Staging_Events__c/fields/ERT_Pastor_Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>ERT_Pastor_Registration_Id__c</fullName>
    <label>ERT Pastor Registration Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>