force-app/main/default/objects/Staging_Events__c/fields/ERT_Registration_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>ERT_Registration_Type_Id__c</fullName>
    <label>ERT Registration Type Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>