force-app/main/default/objects/Staging_Events__c/fields/Event_Abriviation__c.field-meta.xml
<CustomField>
    <fullName>Event_Abriviation__c</fullName>
    <label>Event Abriviation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>